--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,28 +22,28 @@ jobs:
         with:
           args: check
 
-      - name: login to docker hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_LOGIN }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: login to docker hub
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKER_LOGIN }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: get version
         id: get-version
         run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
-      - name: setup docker buildx
-        run: docker buildx create --name conftestbuild --use
+      # - name: setup docker buildx
+      #   run: docker buildx create --name conftestbuild --use
 
-      - name: push images
-        env:
-          VERSION: ${{ steps.get-version.outputs.VERSION }}
-        run: make push TAG=$VERSION
+      # - name: push images
+      #   env:
+      #     VERSION: ${{ steps.get-version.outputs.VERSION }}
+      #   run: make push TAG=$VERSION
 
       - name: setup go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: "1.20.5"
+          go-version: "1.20.x"
 
       - name: release
         uses: goreleaser/goreleaser-action@v2
