--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
     - "Exceptions": "exceptions.md"
     - "Sharing policies": "sharing.md"
     - "Debugging policies": "debug.md"
+    - "Documenting policies": "documentation.md"
     - "Plugins": "plugins.md"
 markdown_extensions:
     - codehilite
