--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,8 +5,8 @@ on:
     tags:
       - 'v*'
 permissions:
-  contents: read
-  packages: read
+  contents: write
+  packages: write
 # env:
 #   IMAGE: checkoyt/conftest
 #   PLATFORMS: linux/amd64
